@@ -120,7 +120,7 @@ public final class NewAction extends AbstractMailAccountAction implements MailAc
         final JSONObject jAccount = jData.toObject();
         final MailAccountDescription accountDescription = new MailAccountDescription();
         final List<OXException> warnings = new LinkedList<OXException>();
-        final Set<Attribute> fieldsToUpdate = MailAccountParser.getInstance().parse(accountDescription, jAccount, warnings, true, session);
+        final Set<Attribute> fieldsToUpdate = MailAccountParser.getInstance().parse(accountDescription, jAccount, warnings, true);
 
         checkNeededFields(accountDescription);
 
